--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Self-Reflections" />
-     <meta property="og:description" content="A fullstack app that allows users to anonymous post and share reflections and find resources regarding mental health." />
+    <meta property="og:title" content="Mental-note" />
+     <meta property="og:description" content="A fullstack app that allows users to anonymous post and share their experiences and find resources regarding mental health." />
     <meta property="og:type" content="website" />
-    <title>Self-Reflections</title>
+    <title>Mental-Notes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Roboto:400,500,700" rel="stylesheet">
     <link href="style.css" rel="stylesheet" />
@@ -16,8 +16,8 @@
 <body>
     <header role="banner">
         <div class="header-container">
-            <h1>Anonymous Self-Reflections</h1>
-            <p>Express. Reflect. Share. </p>
+            <h1>Take time out of your day to reflect</h1>
+            <p>Express your thoughts and share them with others </p>
         </div>
     </header>
 
@@ -36,9 +36,9 @@
 
 
     <section class="start-page row ">
-        <h2>Take a Moment to Reflect</h2>
+        <h2>Let your mind rest easy</h2>
         <img src="/pictures/meditation.jpg">
-        <p>Anonymously share your emotions. Realize that you aren't alone. Find resources.</p>
+        <p>Share how you felt about your day, while building a community with others</p>
     </section>
 
     <section id="new-entry" class="hide-display row">
