--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
     </section>
 
     <section id="reflections-container" class="hide-display row">
-        <h1 class="section-header">Reflections</h1>
+        <h1 class="section-header">Mental-Notes</h1>
 
         <div id="reflections">
         </div>
